[gd_scene load_steps=6 format=3 uid="uid://xvnqb1whl7y5"]

[ext_resource type="Script" uid="uid://dsjijfybiaw02" path="res://Lista1/Exercicio4/Exercicio4.gd" id="1_rxm5w"]

[sub_resource type="LabelSettings" id="LabelSettings_07jpv"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_im7g0"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4usec"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 5.0
bg_color = Color(0.194349, 0.194349, 0.194349, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e0lnp"]
font_size = 18

[node name="Exercicio4" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_rxm5w")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Titulo" type="Label" parent="Center/VBox"]
layout_mode = 2
text = "Calculadora de
Desconto em Compras"
label_settings = SubResource("LabelSettings_07jpv")
horizontal_alignment = 1

[node name="Campos" type="GridContainer" parent="Center/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 2

[node name="ValorLabel" type="Label" parent="Center/VBox/Campos"]
layout_mode = 2
text = "Valor Total"
label_settings = SubResource("LabelSettings_im7g0")

[node name="ValorEntrada" type="LineEdit" parent="Center/VBox/Campos"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24

[node name="DescontoLabel" type="Label" parent="Center/VBox/Campos"]
layout_mode = 2
text = "Desconto"
label_settings = SubResource("LabelSettings_im7g0")
horizontal_alignment = 1

[node name="DescontoEntrada" type="LineEdit" parent="Center/VBox/Campos"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
placeholder_text = "em porcentagem (%)"

[node name="Calcular" type="Button" parent="Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Calcular
"

[node name="Resultado" type="Label" parent="Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4usec")
label_settings = SubResource("LabelSettings_e0lnp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BrindeLabel" type="Label" parent="Center/VBox"]
unique_name_in_owner = true
modulate = Color(0.996078, 0.862745, 0.490196, 1)
layout_mode = 2
label_settings = SubResource("LabelSettings_e0lnp")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Center/VBox/Calcular" to="." method="_on_calcular_pressed"]
